tests/lean/hidingInaccessibleNames.lean.expected.out
hidingInaccessibleNames.lean:4:15-4:16: error: don't know how to synthesize placeholder
context:
x‚úĚ¬≤ : List Nat
x‚úĚ¬Ļ : Nat
x‚úĚ : x‚úĚ¬≤ ‚Č† []
‚äĘ Nat
hidingInaccessibleNames.lean:3:19-3:20: error: don't know how to synthesize placeholder
context:
a b x‚úĚ¬Ļ : Nat
x‚úĚ : [a, b] ‚Č† []
‚äĘ Nat
hidingInaccessibleNames.lean:2:16-2:17: error: don't know how to synthesize placeholder
context:
x‚úĚ¬Ļ : Nat
x‚úĚ : [] ‚Č† []
‚äĘ Nat
hidingInaccessibleNames.lean:10:16-10:17: error: don't know how to synthesize placeholder
context:
x‚úĚ¬≤ : List Nat
x‚úĚ¬Ļ : Nat
x‚úĚ : x‚úĚ¬≤ ‚Č† []
‚äĘ Nat
hidingInaccessibleNames.lean:9:19-9:20: error: don't know how to synthesize placeholder
context:
a b x‚úĚ¬Ļ : Nat
x‚úĚ : [a, b] ‚Č† []
‚äĘ Nat
hidingInaccessibleNames.lean:8:16-8:17: error: don't know how to synthesize placeholder
context:
x‚úĚ¬Ļ : Nat
x‚úĚ : [] ‚Č† []
‚äĘ Nat
case inl
p q : Prop
h‚úĚ : p
‚äĘ q ‚ą® p

case inr
p q : Prop
h‚úĚ : q
‚äĘ q ‚ą® p
hidingInaccessibleNames.lean:23:25-23:26: error: don't know how to synthesize placeholder
context:
p‚úĚ : Prop
of_decide‚úĚ x‚úĚ : p‚úĚ
‚äĘ decide p‚úĚ = true
hidingInaccessibleNames.lean:27:17-27:18: error: don't know how to synthesize placeholder
context:
a‚úĚ : Char
‚äĘ a‚úĚ.val = a‚úĚ.val
